Improve README and add runtime parameters